<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>arina-q</groupId>
	<artifactId>arina-q</artifactId>
	<packaging>pom</packaging>
	<version>8.0.0</version>
	<name>arina-q</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<commons-io.version>2.6</commons-io.version>
		<commons-lang.version>2.6</commons-lang.version>
		<commons-pool.version>1.6</commons-pool.version>
		<camel.version>3.11.0</camel.version>
		<tomcat.version>8.5.35</tomcat.version>
		<junit.version>5.6.2</junit.version>
		<slf4j-jdk14.version>1.7.25</slf4j-jdk14.version>
		<spring.version>5.3.8</spring.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.camel.springboot</groupId>
				<artifactId>camel-spring-boot-dependencies</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.camel</groupId>
				<artifactId>camel-bom</artifactId>
				<version>${camel.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<module>arina-q.core</module>
		<module>arina-q.datasource.db.core</module>
		<module>arina-q.datasource.db.firebird</module>
		<module>arina-q.datasource.db.mariadb</module>
		<module>arina-q.datasource.db.mssql</module>
		<module>arina-q.datasource.db.mysql</module>
		<module>arina-q.datasource.db.oracle</module>
		<module>arina-q.datasource.db.postgresql</module>
		<module>arina-q.tests</module>
	</modules>
</project>
